dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/bat3.c)
dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(bat3, 0.1.2)

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(config.h)

AC_SUBST(VERSION)

#REV werd MYREV maar geen idee hoe het verderr moest
#MYREV=`svn info . | grep 'Revision: '| awk '{print $2}'`
AC_DEFINE(REV,71,"Current revision")
# REV=71
# AM_INIT_AUTOMAKE(REV)
AC_SUBST(REV)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h sys/param.h sys/time.h time.h sys/mkdev.h sys/sysmacros.h string.h memory.h fcntl.h dirent.h sys/ndir.h ndir.h alloca.h locale.h )

jm_CHECK_TYPE_STRUCT_UTIMBUF
AC_HEADER_MAJOR
AC_FUNC_ALLOCA
AC_STRUCT_TM
AC_STRUCT_ST_BLOCKS
AC_FUNC_CLOSEDIR_VOID
#AC_CHECK_FUNCS(mkfifo)
#AC_CHECK_FUNC(mknod)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

dnl AC_OUTPUT(src.old/Makefile src/Makefile Makefile bat3.lsm bat3.spec)
AC_OUTPUT(src/Makefile Makefile bat3.lsm bat3.spec)
